k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestd
spec:
  selector:
    app: requestd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
