k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: 2tunnels
spec:
  rules:
    - host: requestd.2tunnels.com
      http:
        paths:
          - backend:
              serviceName: requestd
              servicePort: 80
